tool cpu/gpu implemetation completed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
     "cSpell.words": [
         "astype",
+        "fillna",
         "finfo",
         "igpu",
+        "iterrows",
+        "levelname",
+        "nvml",
         "pids",
         "pmon",
         "powercap",
