cpu and gpu run tested

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,14 @@
 {
     "cSpell.words": [
         "astype",
+        "dtype",
         "fillna",
         "finfo",
         "igpu",
         "iterrows",
         "levelname",
+        "maxval",
+        "minval",
         "nvml",
         "pids",
         "pmon",
