--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "fillna",
         "finfo",
         "igpu",
+        "igpus",
         "iterrows",
         "levelname",
         "maxval",
@@ -13,6 +14,8 @@
         "pids",
         "pmon",
         "powercap",
+        "powergroup",
+        "powergroups",
         "psutil",
         "psys",
         "pynvml",
