--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -23,15 +23,9 @@ jobs:
           python-version: 'pyproject.toml'
           cache: 'pip'
           cache-dependency-path: 'pyproject.toml'
-          cache-key: ${{ runner.os }}-pip-${{ hashFiles('pyproject.toml') }}
-
       - run: |
           python -m pip install --upgrade pip
           pip install -e .
-
-      - name: Install Dependencies
-        run: conda env update --file environment.yml
-        shell: bash -li {0}
 
       - name: Run Black
         uses: microsoft/action-python@0.7.3
@@ -71,14 +65,9 @@ jobs:
           cache: 'pip'
           cache-dependency-path: 'pyproject.toml'
           cache-key: ${{ runner.os }}-pip-${{ hashFiles('pyproject.toml') }}
-
       - run: |
           python -m pip install --upgrade pip
-          pip install -e .
-
-      - name: Activate Conda Environment
-        run: conda activate ${{ env.PYTHON_ENV_NAME }}
-        shell: bash -li {0}
+          pip install -e .[test]
 
       - name: Run Pytest
         uses: microsoft/action-python@0.7.3
