--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: 'pyproject.toml'
+          python-version: '>=3.9'
           cache: 'pip'
           cache-dependency-path: 'pyproject.toml'
       - run: |
@@ -61,7 +61,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: 'pyproject.toml'
+          python-version: '>=3.9'
           cache: 'pip'
           cache-dependency-path: 'pyproject.toml'
           cache-key: ${{ runner.os }}-pip-${{ hashFiles('pyproject.toml') }}
