--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -13,6 +13,10 @@ env:
 jobs:
   linting:
     runs-on: [self-hosted, linux, x64, philips-code-hub, ubuntu-latest]
+    strategy:
+      matrix:
+        python-version:
+        - ['3.9', '3.10', '3.11', '3.12']
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -20,7 +24,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: ${{ matrix.python-version }}
           cache: 'pip'
           cache-dependency-path: 'pyproject.toml'
       - run: |
@@ -54,6 +58,10 @@ jobs:
 
   testing:
     runs-on: [self-hosted, linux, x64, philips-code-hub, ubuntu-latest]
+    strategy:
+      matrix:
+        python-version:
+        - ['3.9', '3.10', '3.11', '3.12']
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -61,13 +69,12 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-             python-version: '3.9'
+          python-version: ${{ matrix.python-version }}
           cache: 'pip'
           cache-dependency-path: 'pyproject.toml'
-          cache-key: ${{ runner.os }}-pip-${{ hashFiles('pyproject.toml') }}
       - run: |
           python -m pip install --upgrade pip
-          pip install -e .[test]
+          pip install -e .
 
       - name: Run Pytest
         uses: microsoft/action-python@0.7.3
