--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -27,7 +27,7 @@ jobs:
           cache: 'pip'
           cache-dependency-path: 'pyproject.toml'
 
-      - name Install Dependencies
+      - name: Install Dependencies
       - run: |
           python -m pip install --upgrade pip
           pip install -e . 
@@ -74,7 +74,7 @@ jobs:
           cache: 'pip'
           cache-dependency-path: 'pyproject.toml'
 
-      - name Install Dependencies
+      - name: Install Dependencies
       - run: |
           python -m pip install --upgrade pip
           pip install -e . 
