--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -28,7 +28,7 @@ jobs:
           cache-dependency-path: 'pyproject.toml'
 
       - name: Install Dependencies
-      - run: |
+        run: |
           python -m pip install --upgrade pip
           pip install -e . 
           python --version
@@ -75,7 +75,7 @@ jobs:
           cache-dependency-path: 'pyproject.toml'
 
       - name: Install Dependencies
-      - run: |
+        run: |
           python -m pip install --upgrade pip
           pip install -e . 
           python --version
