--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -27,11 +27,15 @@ jobs:
           cache: 'pip'
           cache-dependency-path: 'pyproject.toml'
 
-      - name: Install Dependencies
-      - run: |
-          python -m pip install --upgrade pip
-          pip install -e . 
+      - name: Create Virtual Environment
+        run: python -m venv emt
+
+      - name: Activate Virtual Environment and Install Dependencies
+        run: |
+          source venv/bin/activate
           python --version
+          python -m pip install --upgrade pip
+          pip install -e .
 
       - name: Run Black
         uses: microsoft/action-python@0.7.3
@@ -74,11 +78,15 @@ jobs:
           cache: 'pip'
           cache-dependency-path: 'pyproject.toml'
 
-      - name: Install Dependencies
-      - run: |
-          python -m pip install --upgrade pip
-          pip install -e . 
+      - name: Create Virtual Environment
+        run: python -m venv emt
+
+      - name: Activate Virtual Environment and Install Dependencies
+        run: |
+          source venv/bin/activate
           python --version
+          python -m pip install --upgrade pip
+          pip install -e .[test]
 
       - name: Run Pytest
         uses: microsoft/action-python@0.7.3
