--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -13,9 +13,7 @@ env:
 jobs:
   linting:
     runs-on: [self-hosted, linux, x64, philips-code-hub, ubuntu-latest]
-    strategy:
-      matrix:
-        python-version: ['3.9', '3.10', '3.11', '3.12']
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -23,7 +21,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.12'
           cache: 'pip'
           cache-dependency-path: 'pyproject.toml'
 
@@ -35,12 +33,13 @@ jobs:
           source emt/bin/activate
           python --version
           python -m pip install --upgrade pip
-          pip install -e .
+          python -m pip install -e .
 
       - name: Run Black
         uses: microsoft/action-python@0.7.3
         with:
           black: true
+          workdir:  
 
       - name: Run Bandit
         uses: microsoft/action-python@0.7.3
