testing black ci/cd

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -30,7 +30,7 @@ jobs:
 
       - name: Activate Virtual Environment and Install Dependencies
         run: |
-          source emt/bin/activate
+          source ./emt/bin/activate
           python --version
           python -m pip install --upgrade pip
           python -m pip install -e .
@@ -82,7 +82,7 @@ jobs:
 
       - name: Activate Virtual Environment and Install Dependencies
         run: |
-          source emt/bin/activate
+          source ./emt/bin/activate
           python --version
           python -m pip install --upgrade pip
           python -m pip install -e .[test]
