--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,3 +45,16 @@ include = ["emt"]
 [tool.setuptools_scm]
 version_file = "_version.py"
 
+
+[tool.black]
+line-length = 88
+exclude = '''
+/(
+    \.git
+  | build
+  | dist
+  | __pycache__
+  | docs
+)/
+'''
+
