--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -68,33 +68,33 @@ jobs:
       #   with:
       #     flake8: true
 
-  testing:
-    runs-on: [self-hosted, linux, x64, philips-code-hub, ubuntu-latest]
-    strategy:
-      matrix:
-        python-version: ['3.9', '3.10', '3.11', '3.12']
-    steps:
-      - name: Checkout Code
-        uses: actions/checkout@v4
+  # testing:
+  #   runs-on: [self-hosted, linux, x64, philips-code-hub, ubuntu-latest]
+  #   strategy:
+  #     matrix:
+  #       python-version: ['3.9', '3.10', '3.11', '3.12']
+  #   steps:
+  #     - name: Checkout Code
+  #       uses: actions/checkout@v4
 
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-          cache: 'pip'
-          cache-dependency-path: 'pyproject.toml'
+  #     - name: Setup Python
+  #       uses: actions/setup-python@v5
+  #       with:
+  #         python-version: ${{ matrix.python-version }}
+  #         cache: 'pip'
+  #         cache-dependency-path: 'pyproject.toml'
 
-      - name: Create Virtual Environment
-        run: python -m venv emt
+  #     - name: Create Virtual Environment
+  #       run: python -m venv emt
 
-      - name: Activate Virtual Environment and Install Dependencies
-        run: |
-          source ./emt/bin/activate
-          python --version
-          python -m pip install --upgrade pip
-          python -m pip install -e .[test]
+  #     - name: Activate Virtual Environment and Install Dependencies
+  #       run: |
+  #         source ./emt/bin/activate
+  #         python --version
+  #         python -m pip install --upgrade pip
+  #         python -m pip install -e .[test]
 
-      - name: Pytest
-        uses: microsoft/action-python@0.7.0
-        with:          
-          testing: true
+  #     - name: Pytest
+  #       uses: microsoft/action-python@0.7.0
+  #       with:          
+  #         testing: true
