--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -39,7 +39,9 @@ jobs:
           echo "Listing contents of ${{ inputs.root }}/${{ inputs.workdir }}"
           ls -al ${{ inputs.root }}/${{ inputs.workdir }}
           echo "cwd:"
-          ls -al ${{ inputs.root }}/${{ inputs.workdir }}
+          ls -al .
+          echo "GITHUB_WORKSPACE"
+          ls -al $GITHUB_WORKSPACE
           
       # - name: Run Black
       #   uses: microsoft/action-python@0.7.3
