--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -52,10 +52,11 @@ jobs:
           git stash -u && git stash drop
           reviewdog -f=diff\
                     -name=BLACK\
-                    -reporter=github-pr-review\
+                    -reporter=github-pr-check\
                     -filter-mode='diff_context'\
                     -fail-level=error\
                     -diff="git diff FETCH_HEAD"\
+                    -level=warning\
                     -tee < $TEMPFILE
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
