--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,11 @@ classifiers = [
 #     "License :: OSI Approved :: Apache Software License",
     "Intended Audience :: Developers",
     "Topic :: Scientific/Engineering :: Artificial Intelligence",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.10+",
 ]
+
 keywords = ["deep-learning", "power", "energy", "carbon", "sustainability", "emt", "philips"]
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 dependencies = [
     "psutil",
     "numpy",
