pyproject and spell list update

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
         "pycache",
         "pynvml",
         "pyright",
+        "pytest",
         "Rameez",
         "RAPL",
         "seperate",
