Fix/sonar warning (#29)
* disabled shallow clone

* settings update to connect to sonarqube

* connection config added

* spell update

* intentional formatting error

* Add ReviewDog setup and update Python setup in pull_request.yml

* Update tests/test_energy_meter.py

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

---------

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -24,9 +24,13 @@
         "pynvml",
         "pyright",
         "pytest",
+        "Qube",
         "Rameez",
         "RAPL",
-        "seperate",
-        "setuptools"
-    ]
+        "seperate"
+    ],
+    "sonarlint.connectedMode.project": {
+        "connectionId": "https-sonarqube-internal-philips",
+        "projectKey": "philips-internal.energy-monitoring-tool"
+    }
 }
