--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,6 @@
 sonar.projectKey=philips-internal.energy-monitoring-tool
 sonar.python.version=3.10, 3.11, 3.12
+sonar.python.coverage.reportPaths=coverage.xml
+
+
+
