Feature/test cases (#34)
* Modify pytest based test for nvidia gpu

* Add logging energy traces as csv

* Add repeatation test on MNIST CV task

* Add initial repeat test analysis

* Add analysis on stress simulation

* Add limit GPU usage in MNIST setup and rerun exps

* Add Minor chnages in MNIST setup

* Add idle energy analysis

* Add results of repeated idle energy test

* Add test for RAPL_SOC

* Add test for enrgymeter, examples, and restructure test folder

* Remove analysis from main code

* Modify code formatting

* Update test dependencies

* Delete tests/test_energy_meter.old

* Update emt/energy_meter.py

Modify typing

Co-authored-by: Rameez <rameez.ismaeel@gmail.com>

* Update emt/energy_meter.py

Modify imports

Co-authored-by: Rameez <rameez.ismaeel@gmail.com>

* Modify type hints

* Add coveragerc file to exclude dir from coverage

---------

Co-authored-by: Rameez <rameez.ismaeel@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,8 +35,11 @@ Repository = "https://github.com/philips-internal/energy-monitoring-tool"
 
 [project.optional-dependencies]
 dev = ["black"]
-test = ["tensorflow[and-cuda]", "pytest", "coverage"]
-
+test = [
+    "tensorflow[and-cuda]", 
+    "pytest",
+    "pytest-asyncio",
+]
 
 [tool.setuptools.packages.find]
 where = ["."]
